# proc-story

./: CMakeLists.txt  items.yml  main  readme.md
data/: types.hpp  vectors.h  vectors.hpp
entitydata/: enchantments.hpp  item.h  item.hpp  player.h  player.hpp
rendering/: renderer.c  renderer.cpp  renderer.hpp
src/: main.c  main.cpp
